--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "Portfolio",
+  "name": "portfolio",
+  "author": "ivan martins",
   "private": true,
   "version": "0.0.0",
   "type": "module",
