--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.27.0",
-    "styled-components": "^6.1.13"
+    "react-tsparticles": "^2.12.2",
+    "styled-components": "^6.1.13",
+    "tsparticles": "^2.12.0",
+    "tsparticles-engine": "^2.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
